<?xml version="1.0"?>
<package format="3">
  <name>turtle_bot_control</name>
  <version>0.0.1</version>
   <description>
    Simple ROS2 node for turtle bot movement control
  </description>
  <maintainer email="thehuman130410@gmail.com">
    Raempest
  </maintainer>
  <license>MIT</license>
    <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
    <export>
    <build_type>ament_python</build_type>
  </export>

</package>
